// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrcidPushSetting renders when disabled 1`] = `
<DocumentFragment>
  <div
    class="mb3"
  >
    <span
      class="mr2"
    >
      Export your INSPIRE works to ORCID
    </span>
    <button
      aria-checked="false"
      class="ant-switch"
      data-test-id="orcid-switch"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      />
    </button>
  </div>
  <div>
    <div
      data-testid="orcid-push-setting-message"
    >
      <p>
        Your INSPIRE works are not exported to your ORCID yet. Please note that only the publications that are verified as yours on INSPIRE will be exported to ORCID.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OrcidPushSetting renders when enabled 1`] = `
<DocumentFragment>
  <div
    class="mb3"
  >
    <span
      class="mr2"
    >
      Export your INSPIRE works to ORCID
    </span>
    <button
      aria-checked="true"
      class="ant-switch ant-switch-checked"
      data-test-id="orcid-switch"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      />
    </button>
  </div>
  <div>
    <div
      data-testid="orcid-push-setting-message"
    >
      <p>
        Your INSPIRE works are not exported to your ORCID yet. Please note that only the publications that are verified as yours on INSPIRE will be exported to ORCID.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
